# thesis

./: .gitignore  teste.py  teste3.pcd
brand/: modelo.ods  (+6 more)
dat2pcd_batch/: CMakeLists.txt  dat2pcd_batch.cpp
disparity/: CMakeLists.txt  disparity.cpp  disparity.h  image.h  main.cpp
disparity/libelas-m/: CMakeLists.txt
disparity/libelas-m/src/: image.h  main.cpp
m2dp/: M2DP.m  (+8 more)
pnd2pcd_batch/: CMakeLists.txt  CMakeLists.txt~  cam_params.cfg  png2pcd_batch.cpp  png2pcd_batch.cpp~  png2pcd_batch_qqvga.cpp
pnd2pcd_batch/build_bkp/: CMakeCache.txt  Makefile  png2pcd_batch_vga
prototype1/: CMakeLists.txt  CMakeLists.txt~  ahc.cc  ahc.h  feature.cc  feature.h  io.cc  io.h  keypoint.cc  keypoint.h  omp.cc  omp.h  outlier.cc  outlier.h  pipeline.cc  pipeline.h  scorer.cc  scorer.h  segmentation.cc  segmentation.h
prototype1/peac/: AHCPlaneFitter.hpp
prototype1/presentation/: PPR_INF.sty  presentation.aux  presentation.nav  presentation.out  presentation.snm  presentation.tex  presentation.toc
prototype2/: CMakeLists.txt  config.cc  config.h  config.xml  dataset.cc  dataset.h  descriptor.cc  descriptor.h  distances_widget.cc  distances_widget.h  m2dp.cc  m2dp.h  main.cc  matcher.cc  matcher.h  normal.cc  normal.h  output.cc  output.h  pch.cc  pch.h  pipeline.cc  pipeline.h  scene.cc  scene.h  shot.cc  shot.h  trajectory_widget.cc  trajectory_widget.h  util.cc  util.h
prototype2/batch/: config00_cm2dp.xml  config00_cshot.xml  config00_m2dp.xml  config00_shot.xml  config05_cm2dp.xml  config05_cshot.xml  config05_m2dp.xml  config05_shot.xml  config06_cm2dp.xml  config06_cshot.xml  config06_m2dp.xml  config06_shot.xml  config07_cm2dp.xml  config07_cshot.xml  config07_m2dp.xml  config07_shot.xml
prototype2/conf/: color-signature.tex  conf.aux  conf.blg  conf.nav  conf.out  conf.snm  conf.tex  conf.toc  projection-signature.tex  shape-signature.tex
prototype2/defesa/: color-signature.tex  defesa.aux  defesa.blg  defesa.nav  defesa.out  defesa.snm  defesa.tex  defesa.toc  projection-signature.tex  projections.tex  shape-signature.tex  slam-example.tex  slam-graphical.tex
prototype2/presentation/: .~lock.build.ods#  build_times_lidar_camera.ods  build_times_stereo.ods  descriptors.ods  presentation.aux  presentation.bib  presentation.blg  presentation.nav  presentation.out  presentation.snm  presentation.tex  presentation.toc  presentation2.aux  presentation2.nav  presentation2.out  presentation2.snm  presentation2.tex  presentation2.toc  presentation3.aux  presentation3.nav  presentation3.tex  presentation3.toc  times_kitti00.csv
prototype2/presentation/data/lidar/m2dp/: build_kitti07_lidar_m2dp.csv  dataset_kitti07_lidar_m2dp.yml  matching_kitti07_lidar_m2dp.csv  precisionrecall_kitti07_lidar_m2dp.csv
prototype2/presentation/data/lidar_camera/cm2dp/: teste.csv  teste2.csv
prototype2/presentation/data/lidar_camera/cshot/: build_kitti00_lidar_camera_cshot.csv  build_kitti05_lidar_camera_cshot.csv  build_kitti06_lidar_camera_cshot.csv  build_kitti07_lidar_camera_cshot.csv  matching_kitti00_lidar_camera_cshot.csv  matching_kitti05_lidar_camera_cshot.csv  matching_kitti06_lidar_camera_cshot.csv  matching_kitti07_lidar_camera_cshot.csv  precisionrecall_kitti00_lidar_camera_cshot.csv  precisionrecall_kitti05_lidar_camera_cshot.csv  precisionrecall_kitti06_lidar_camera_cshot.csv  precisionrecall_kitti07_lidar_camera_cshot.csv
prototype2/presentation/data/lidar_camera/m2dp/: build_kitti00_lidar_camera_m2dp.csv  build_kitti05_lidar_camera_m2dp.csv  build_kitti06_lidar_camera_m2dp.csv  build_kitti07_lidar_camera_m2dp.csv  dataset_kitti06_lidar_camera_m2dp.yml  dataset_kitti07_lidar_camera_m2dp.yml  matching_kitti00_lidar_camera_m2dp.csv  matching_kitti05_lidar_camera_m2dp.csv  matching_kitti06_lidar_camera_m2dp.csv  matching_kitti07_lidar_camera_m2dp.csv  precisionrecall_kitti00_lidar_camera_m2dp.csv  precisionrecall_kitti05_lidar_camera_m2dp.csv  precisionrecall_kitti06_lidar_camera_m2dp.csv  precisionrecall_kitti07_lidar_camera_m2dp.csv
prototype2/presentation/data/lidar_camera/res10/: build_kitti06_lidar_camera_cm2dp.csv  build_kitti06_lidar_camera_cshot.csv  build_kitti06_lidar_camera_m2dp.csv  dataset_kitti06_lidar_camera_m2dp.yml  matching_kitti06_lidar_camera_cm2dp.csv  matching_kitti06_lidar_camera_cshot.csv  (+4 more)
(+172 files in other folders)
